--- a/index.html
+++ b/index.html
@@ -2,14 +2,35 @@
 <!doctype html>
 <html>
   <head>
-    <title>2019 Migrants</title>
+
+      <meta charset="utf8" />
+          <link rel="stylesheet" href="css/site.css" />
+    <title>Migrant Deaths on Record</title>
+
   </head>
   <body>
+    <div class="GridContainer">
+      <div class="Header">
+          <h1>2019 Recorded Migrant Deaths </h1>
+      </div>
 
 
-<div class="BarChart-bar" style="height: 88.5%">US-Mexico Border</div>
-<div class="BarChart-bar" style="height: 75.5%">Sub Saharan/Horn of Africa</div>
-<div class="BarChart-bar" style="height: 55.9%">Mediterranean</div>
-
-  </body>
+    <div class="BarChart">
+      <div class="BarChart-bar-US" style="width: 97.6%%">US-Mexico Border</div>
+      <div class="BarChart-bar-Med" style="width: 99%">Mediterranean</div>
+      <div class="BarChart-bar-SaharanA" style="width: 65.2%">Sub Saharan Africa</div>
+      <div class="BarChart-bar-Europe" style="width: 25.8%">Europe</div>
+      <div class="BarChart-bar-SEAsia" style="width: 27.6%">Southeast Asia</div>
+      <div class="BarChart-bar-SAsia" style="width: 15.6%">South Asia</div>
+      <div class="BarChart-bar-MiddleE" style="width: 31.6%">Middle East</div>
+      <div class="BarChart-bar-HornA" style="width: 13.2%">Horn of Africa</div>
+      <div class="BarChart-bar-NAfrica" style="width: 50.6%">North Africa</div>
+      <div class="BarChart-bar-SAmerica" style="width: 6.6%">South America</div>
+      <div class="BarChart-bar-CentralCarr" style="width: 34.8%">Central America/Carribean</div>
+        </div>
+        <div class="BarChart-max">500</div>
+    <hr class="BottomLine">
+        </div>
+      </div>
+    </body>
   <html>
