transition and alerts

--- a/index.html
+++ b/index.html
@@ -16,17 +16,28 @@
 
 
     <div class="BarChart">
-      <div class="BarChart-bar-US" style="width: 97.6%%">US-Mexico Border</div>
-      <div class="BarChart-bar-Med" style="width: 99%">Mediterranean</div>
-      <div class="BarChart-bar-SaharanA" style="width: 65.2%">Sub Saharan Africa</div>
-      <div class="BarChart-bar-Europe" style="width: 25.8%">Europe</div>
-      <div class="BarChart-bar-SEAsia" style="width: 27.6%">Southeast Asia</div>
-      <div class="BarChart-bar-SAsia" style="width: 15.6%">South Asia</div>
-      <div class="BarChart-bar-MiddleE" style="width: 31.6%">Middle East</div>
-      <div class="BarChart-bar-HornA" style="width: 13.2%">Horn of Africa</div>
-      <div class="BarChart-bar-NAfrica" style="width: 50.6%">North Africa</div>
-      <div class="BarChart-bar-SAmerica" style="width: 6.6%">South America</div>
-      <div class="BarChart-bar-CentralCarr" style="width: 34.8%">Central America/Carribean</div>
+      <div onClick="alert('488 recorded deaths')"
+      class="BarChart-bar-US" style="width: 97.6%%">US-Mexico Border</div>
+      <div onClick="alert('495 recorded deaths')"
+      class="BarChart-bar-Med" style="width: 99%">Mediterranean</div>
+      <div onClick="alert('326 recorded deaths')"
+      class="BarChart-bar-SaharanA" style="width: 65.2%">Sub Saharan Africa</div>
+      <div onClick="alert('129 recorded deaths')"
+      class="BarChart-bar-Europe" style="width: 25.8%">Europe</div>
+      <div onClick="alert('138 recorded deaths')"
+      class="BarChart-bar-SEAsia" style="width: 27.6%">Southeast Asia</div>
+      <div onClick="alert('78 recorded deaths')"
+      class="BarChart-bar-SAsia" style="width: 15.6%">South Asia</div>
+      <div onClick="alert('158 recorded deaths')"
+      class="BarChart-bar-MiddleE" style="width: 31.6%">Middle East</div>
+      <div onClick="alert('66 recorded deaths')"
+      class="BarChart-bar-HornA" style="width: 13.2%">Horn of Africa</div>
+      <div onClick="alert('253 recorded deaths')"
+      class="BarChart-bar-NAfrica" style="width: 50.6%">North Africa</div>
+      <div onClick="alert('33 recorded deaths')"
+      class="BarChart-bar-SAmerica" style="width: 6.6%">South America</div>
+      <div onClick="alert('174 recorded deaths')"
+      class="BarChart-bar-CentralCarr" style="width: 34.8%">Central America/Carribean</div>
         </div>
         <div class="BarChart-max">500</div>
     <hr class="BottomLine">
